@@ -961,6 +961,12 @@ ROOMS, STATE, HIDDEN, POPULATION, MIN_LEVEL, MAX_LEVEL, AVG_LEVEL, MED_LEVEL, AV
 MED_ALIGNMENT, TOTAL_LEVELS, TOTAL_INTELLIGENT_LEVELS, VISITABLE_ROOMS, INDOOR_ROOMS.  \
 If the columns parameter is used, then you can follow it with columns to substitute in the table.
 
+LIST_TIMEZONES=\
+Command  : LIST\n\r\
+Usage    : LIST TIMEZONES\n\r\
+Example  : list timezones\n\r\
+Lists all areas grouped by their shared calendar/time.
+
 LIST_WORLD=\
 Command  : LIST\n\r\
 Usage    : LIST WORLD (SORTBY [COLUMN]...) (COLS [COLUMN]...))\n\r\
