@@ -3,6 +3,8 @@
    2. STAT [MOBNAME] will now give full editor stats also, and 
    3. STAT [ITEMNAME/AREANAME/EXITNAME/ROOMNAME] now gives editor stats without editing
    4. New Locales: WaterSurfaceColumn and UnderWaterColumnGrid, and Salt water varieties.
+   5. LIST TIMEZONES can now show all your areas grouped by common calendar.
+   6. Smelting recipes are now editable from MG and CL.
 
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
